Small padding change to prevent line wrapping on contact links on the team page.
--HG--
extra : convert_revision : svn%3A60972f9f-2242-074b-9109-3933092f38a4/trunk%401241

--- a/stylesheets/shared-package/default.css
+++ b/stylesheets/shared-package/default.css
@@ -1892,7 +1892,7 @@ ul.ui-autocomplete .ui-menu-item a span.playlist {
             font-size: 13px;
         }
         #the-team .team-card .card-info .contact-links a, .general-contact a {
-            padding: 10px 10px 10px 28px;
+            padding: 10px 9px 10px 28px;
             text-decoration: none;
         }
         #the-team .team-card .card-info .contact-links a:hover, .general-contact a:hover {
